[package]
name = "eip3074-instructions"
version = "0.1.0"
edition = "2021"

[dependencies]
revm = { version = "10.0.0", features = [
    "std",
    "secp256k1",
    "blst",
    "optimism"
], default-features = false }

[dev-dependencies]
secp256k1 = { version = "0.29", default-features = false, features = [
    "alloc",
    "recovery",
    "rand-std"
] }

[features]
default = ["optimism"]
optimism = [
  "revm/optimism"
]

[patch.crates-io]
#revm = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
#revm-interpreter = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
#revm-precompile = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
#revm-primitives = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }